fix(filtered-search): focus ring not visible in case of empty option value
fixes the issue where focus ring is not visible due to element height being 0px when option value is empty even when focus is on the option value element. min block size is added to prevent 0px height.

Closes #879+

--- a/projects/element-ng/filtered-search/values/date-value/si-filtered-search-date-value.component.scss
+++ b/projects/element-ng/filtered-search/values/date-value/si-filtered-search-date-value.component.scss
@@ -1,3 +1,7 @@
 input {
   background: transparent;
 }
+
+.criterion-value-text {
+  min-block-size: 24px;
+}
