--- a/projects/element-ng/filtered-search/values/typeahead/si-filtered-search-typeahead.component.scss
+++ b/projects/element-ng/filtered-search/values/typeahead/si-filtered-search-typeahead.component.scss
@@ -8,3 +8,7 @@ input {
     margin: 0;
   }
 }
+
+.criterion-value-text {
+  min-block-size: 24px;
+}
